--- a/app/globals.css
+++ b/app/globals.css
@@ -240,6 +240,34 @@ html {
   -webkit-tap-highlight-color: transparent;
 }
 
+/* شريط التمرير للإشعارات - يعمل على جميع الشاشات */
+.notification-scrollbar {
+  scrollbar-width: thin;
+  scrollbar-color: rgb(148 163 184) transparent;
+}
+.notification-scrollbar::-webkit-scrollbar {
+  width: 8px;
+}
+.notification-scrollbar::-webkit-scrollbar-track {
+  background: transparent;
+}
+.notification-scrollbar::-webkit-scrollbar-thumb {
+  background-color: rgb(148 163 184);
+  border-radius: 4px;
+}
+.notification-scrollbar::-webkit-scrollbar-thumb:hover {
+  background-color: rgb(100 116 139);
+}
+.dark .notification-scrollbar {
+  scrollbar-color: rgb(71 85 105) transparent;
+}
+.dark .notification-scrollbar::-webkit-scrollbar-thumb {
+  background-color: rgb(71 85 105);
+}
+.dark .notification-scrollbar::-webkit-scrollbar-thumb:hover {
+  background-color: rgb(51 65 85);
+}
+
 /* منع التحديد العرضي */
 .no-select {
   -webkit-user-select: none;
